[FIX TRTL-778] Fix sidenav y scrollbar

--- a/ui/ui-frontend-common/src/sass/material/_preview-tab.scss
+++ b/ui/ui-frontend-common/src/sass/material/_preview-tab.scss
@@ -48,8 +48,9 @@
     }
 
     .mat-tab-body-content {
-        padding: 55px 30px 20px;
-        overflow: visible;
+        margin-top: 40px;
+        padding: 15px 30px;
+        height: calc(100% - 40px);
     }
 
     .mat-ink-bar {
